log
Wed, May 11, 2022 12:59:43 AM: 
 heap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|4
total_score: 0/70
68ea007
Wed, May 11, 2022  1:00:19 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4fbe37a
Wed, May 11, 2022  1:03:46 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
da37944
Wed, May 11, 2022  1:05:16 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
eaadcb4
Wed, May 11, 2022  1:06:00 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
f361c37
Wed, May 11, 2022  1:21:54 AM: 
 heap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:44: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
       pq->heapArray = (heapElem *) realloc(pq->capac*2, sizeof(heapElem));
                                            ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
In file included from test.c:4:0:
heap.c:33:8: error: unused variable 'k' [-Werror=unused-variable]
    int k = pq->size;
        ^
cc1.exe: all warnings being treated as errors
Compilation failed
1debab0
Wed, May 11, 2022  1:22:01 AM: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:28:44: error: passing argument 1 of 'realloc' makes pointer from integer without a cast [-Werror=int-conversion]
       pq->heapArray = (heapElem *) realloc(pq->capac*2, sizeof(heapElem));
                                            ^~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:486:40: note: expected 'void *' but argument is of type 'int'
 _CRTIMP __cdecl __MINGW_NOTHROW  void *realloc (void *, size_t);
                                        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1c72b9a
Wed, May 11, 2022  1:24:52 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e5339d3
Wed, May 11, 2022  1:25:17 AM: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
3a17235
Wed, May 11, 2022  1:25:40 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
2d610ee
Wed, May 11, 2022  1:26:46 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
1fdda8c
Wed, May 11, 2022  1:29:59 AM: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
cce66e1
Wed, May 11, 2022  1:34:26 AM: 
 heap.c | 18 +++++++++++++++---
 1 file changed, 15 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
126aaf4
Wed, May 11, 2022  1:34:57 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:39:10: error: implicit declaration of function 'print' [-Werror=implicit-function-declaration]
          print("pos: %d\n", i);
          ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c4a522b
Wed, May 11, 2022  1:35:03 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d4df10b
Wed, May 11, 2022  1:36:23 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
2f19922
Wed, May 11, 2022  1:38:37 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:37:36: error: comparison between pointer and integer [-Werror]
       if(pq->heapArray[i].priority == NULL || pq->heapArray[i].priority == 0)
                                    ^~
cc1.exe: all warnings being treated as errors
Compilation failed
c483911
Wed, May 11, 2022  1:38:48 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e7deaba
Wed, May 11, 2022  1:41:59 AM: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|2
total_score: 20/70
e2aff3b
Wed, May 11, 2022  1:42:31 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
48fbd6a
Wed, May 11, 2022  1:43:39 AM: 
 heap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|2
total_score: 20/70
5b3098e
Wed, May 11, 2022  1:43:54 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
4634aa4
Wed, May 11, 2022  1:48:21 AM: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
660fd7c
Wed, May 11, 2022  1:48:57 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
size: 6
28760fa
Wed, May 11, 2022  1:54:12 AM: 
 heap.c | 21 +++++++++------------
 1 file changed, 9 insertions(+), 12 deletions(-)
 tests:  2|0
size: 6
1970d69
Wed, May 11, 2022  1:54:43 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
ed2eb25
Wed, May 11, 2022  1:55:11 AM: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 25/70
e470c73
Wed, May 11, 2022  1:55:20 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
9e29a4d
Wed, May 11, 2022  1:56:05 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
1aad88c
Wed, May 11, 2022  2:00:12 AM: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 25/70
7661a11
Wed, May 11, 2022  2:03:22 AM: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
7c739ee
Wed, May 11, 2022  2:03:53 AM: 
 heap.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  7|1
total_score: 45/70
ef25f51
Wed, May 11, 2022  2:08:33 AM: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:83:4: error: implicit declaration of function 'print' [-Werror=implicit-function-declaration]
    print("maxpos: %d\n", maxPos);
    ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
e1be258
Wed, May 11, 2022  2:08:40 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
a979ab2
Wed, May 11, 2022  2:20:32 AM: 
 heap.c | 53 ++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 52 insertions(+), 1 deletion(-)
 tests:  0|0
b69e01f
Wed, May 11, 2022  2:21:49 AM: 
 heap.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
 tests:  7|0
   [ INFO ] Eliminando otro dato
f85fd41
Wed, May 11, 2022  2:22:56 AM: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function 'heap_pop':
heap.c:111:9: error: implicit declaration of function 'elif' [-Werror=implicit-function-declaration]
       } elif (pq->heapArray[childAPos].priority < pq->heapArray[childBPos].priority) {
         ^~~~
heap.c:111:86: error: expected ';' before '{' token
       } elif (pq->heapArray[childAPos].priority < pq->heapArray[childBPos].priority) {
                                                                                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
6a48387
Wed, May 11, 2022  2:23:52 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
48a16c8
Wed, May 11, 2022  2:24:32 AM: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|0
afb51b1
Wed, May 11, 2022  2:25:06 AM: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
afb51b1
Wed, May 11, 2022  2:31:17 AM: 
 heap.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:61:13: error: unused variable 'aux' [-Werror=unused-variable]
    heapElem aux;
             ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
77addc8
Wed, May 11, 2022  2:31:36 AM: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
7613978
Wed, May 11, 2022  2:33:40 AM: 
 heap.c | 11 +----------
 1 file changed, 1 insertion(+), 10 deletions(-)
 tests:  7|1
total_score: 45/70
72137cf
Wed, May 11, 2022  2:33:54 AM: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 45/70
634ab3d
Wed, May 11, 2022  2:35:54 AM: 
 heap.c | 62 +++++---------------------------------------------------------
 1 file changed, 5 insertions(+), 57 deletions(-)
 tests:  7|1
total_score: 45/70
e596721
